<resources>
    <string name="app_name">Tetris Game</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="rotate">Rotate</string>
    <string name="game_is_over">Вы проиграли(</string>
    <string name="Gamestart">Начать игру</string>
    <string name="ButtonSettings">Настройки</string>
    <string name="ButtonExit">Выход из игры</string>
    <string name="Supermegaigra">Классическая 2048</string>
    <string name="title_activity_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Back">Назад</string>
    <string name="Prefercolor">Какого цвета, вы бы хотели сделать фон?</string>
    <string name="Blue">Серый</string>
    <string name="Pink">Голубой</string>
    <string name="tet">Тетрис</string>
    <string name="two048">2048</string>
</resources>