<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Phon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/op1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/NameGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/Supermegaigra"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonSetings"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/style_btn_stroke_black95_press_white"
        android:text="@string/ButtonSettings"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Buttonexit"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/style_btn_stroke_black95_press_white"
        android:text="@string/ButtonExit"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tetbutton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/style_btn_stroke_black95_press_white"
        android:text="@string/two048"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>