<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979797">


    <Button
        android:id="@+id/returnbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Back"
        android:background="@drawable/style_btn_stroke_black95_press_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlVar1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#979797"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tvVar1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="55dp"
            android:text="@string/Prefercolor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_below="@+id/tvVar1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="497dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btVar2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/style_btn_stroke_black95_press_white"
                android:onClick="onClickbtVar2"
                android:padding="20dp"
                android:text="@string/Blue"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btVar1"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/style_btn_stroke_black95_press_white"
                android:onClick="onClickbtVar1"
                android:padding="20dp"
                android:text="@string/Pink"
                android:textSize="15dp" />

        </LinearLayout>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>